--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
+    <link rel=”stylesheet” href=”https://cdnjs.cloudflare.com/ajax/libs/octicons/3.5.0/octicons.min.css" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
